feat: add diff methods

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preglobal:add": "yarn build",
     "build": "tsc -p .",
     "dev": "ts-node-dev --no-notify --respawn --transpileOnly  src/cli.ts",
+    "run": "ts-node-dev --no-notify --transpileOnly  src/cli.ts",
     "lint": "eslint 'src/**/*.ts'",
     "prepare": "yarn build",
     "postpack": "shx rm -rf dist",
@@ -19,13 +20,8 @@
     "type": "git",
     "url": "git+https://github.com/rhyslbw/hasura-allow-operations-in.git"
   },
-  "keywords": [
-    "Hasura",
-    "GraphQL"
-  ],
-  "maintainers": [
-    "Rhys Bartels-Waller <rhyslbw@gmail.com>"
-  ],
+  "keywords": ["Hasura", "GraphQL"],
+  "maintainers": ["Rhys Bartels-Waller <rhyslbw@gmail.com>"],
   "engines": {
     "node": "^10 || ^12"
   },
@@ -38,15 +34,18 @@
     "@graphql-toolkit/core": "^0.10.6",
     "@graphql-toolkit/graphql-file-loader": "^0.10.6",
     "axios": "^0.19.2",
-    "delay": "^4.3.0",
+    "colors": "^1.4.0",
+    "diff": "^5.0.0",
     "graphql": "^14.0.0"
   },
   "devDependencies": {
+    "@types/diff": "^5.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^12.6.8",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "docker-compose": "^0.23.4",
+    "delay": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.1",
