chore: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hasura-allowed-queries",
+  "name": "@taller/hasura-allowed-queries",
   "version": "0.1.0",
   "description": "Populate the Hasura allow-list from found GraphQL operations in a path",
   "main": "dist/index.js",
