--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Populate the Hasura allow-list from found GraphQL operations in a path",
   "main": "dist/index.js",
   "bin": {
-    "hhasura-allowed-queries": "dist/cli.js"
+    "hasura-allowed-queries": "dist/cli.js"
   },
   "scripts": {
     "preglobal:add": "yarn build",
