--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@taller/hasura-allowed-queries",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Populate the Hasura allow-list from found GraphQL operations in a path",
   "main": "dist/index.js",
   "bin": {
@@ -28,7 +28,7 @@
     "Rhys Bartels-Waller <rhyslbw@gmail.com>"
   ],
   "engines": {
-    "node": "^10 || ^12"
+    "node": "^10 || ^14"
   },
   "license": "MPL-2.0",
   "bugs": {
@@ -36,35 +36,37 @@
   },
   "homepage": "https://github.com/TallerWebSolutions/hasura-allowed-queries#README.md",
   "dependencies": {
-    "@graphql-toolkit/core": "^0.10.6",
-    "@graphql-toolkit/graphql-file-loader": "^0.10.6",
+    "@graphql-tools/graphql-file-loader": "^6.2.7",
+    "@graphql-tools/load": "^6.2.8",
+    "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/utils": "^7.10.0",
     "axios": "^0.21.1",
-    "chalk": "^4.1.0",
-    "commander": "^7.0.0",
+    "chalk": "^4.1.1",
+    "commander": "^7.2.0",
     "diff": "^5.0.0",
-    "graphql": "^14.0.0"
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "@types/diff": "^5.0.0",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^12.6.8",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "delay": "^4.3.0",
-    "docker-compose": "^0.23.4",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.36",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "delay": "^5.0.0",
+    "docker-compose": "^0.23.12",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-watch": "^6.0.1",
-    "jest": "^26.0.0",
-    "prettier": "^2.0.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-watch": "^7.0.0",
+    "jest": "^27.0.5",
+    "prettier": "^2.3.1",
     "shx": "^0.3.2",
-    "ts-jest": "^25.5.0",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "typescript": "3.5.3"
+    "ts-jest": "^27.0.3",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.3"
   },
   "files": [
     "dist/*",
