--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "Homeskillet <dev@homeskillet.app>"
   ],
   "engines": {
-    "node": "^10 || ^14"
+    "node": "^16"
   },
   "license": "MPL-2.0",
   "bugs": {
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@types/diff": "^5.0.0",
     "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.36",
+    "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "delay": "^5.0.0",
