--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@herojourneyclub/hasura-allow-list-manager",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Populate the Hasura allow-list from found GraphQL operations in your project",
   "main": "dist/index.js",
   "bin": {
@@ -39,11 +39,13 @@
     "@graphql-tools/load": "^7.8.12",
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/utils": "^9.2.1",
+    "@types/js-yaml": "^4.0.8",
     "axios": "^0.21.4",
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "diff": "^5.0.0",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/diff": "^5.0.0",
